--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* estilos globales */
 body{
     background-color: #C4C7B8;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -12,24 +13,13 @@ h1 {
     font-size: 45px;
     color: orangered;
     -webkit-text-stroke-color: whitesmoke;
-    -webkit-text-stroke-width: 1.5px;
+    -webkit-text-stroke-width: 1px;
     font-style: italic;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
-/* titulo principal para computadoras */
-@media (min-width: 1268px) {
-    h1 {
-        text-align: center;
-        text-align: center;
-        font-size: 90px;
-        color: orangered;
-        -webkit-text-stroke-color: whitesmoke;
-        -webkit-text-stroke-width: 3px;
-        font-style: italic;
-    }
-}
-
-/* titulos secundarios para cada seccion */
+/* estilos para los titulos secundarios */
 h2 {
     text-align: center;
     font-size: 36px;
@@ -39,7 +29,22 @@ h2 {
     color: orangered;
 }
 
+/* titulo principal y secundario para computadoras */
+@media (min-width: 1024px) {
+    h1 {
+        text-align: center;
+        text-align: center;
+        font-size: 90px;
+        color: orangered;
+        -webkit-text-stroke-color: whitesmoke;
+        -webkit-text-stroke-width: 3px;
+        font-style: italic;
+        margin-top: 2rem;
+    }
 
+}
+
+/* estilos para la barra de navegacion */
 header nav{
     display: flex;
     justify-content: space-between;
@@ -59,16 +64,17 @@ header nav ul li{
     text-wrap: nowrap;
     font-family:fantasy;
     font-variant: small-caps;
-    font-size: 150%;
+    font-size: 180%;
 }
 
+/* estilos para la imagen de la pagina principal */
 #main-slogan {
     display: flex;
     justify-content: center;
-    height: 100%;
-    width: 100%;
+
 }
 
+/* estilos para los textos de la pagina principal en pantallas chicas y medianas*/
 .main-text {
     display: flex;
     flex-direction: column;
@@ -82,6 +88,7 @@ header nav ul li{
     padding: 25px;
 }
 
+/* estilos para los textos de la pagina principal en pantallas grandes */
 @media (min-width: 1024px) {
     .main-text {
         display: flex;
@@ -110,6 +117,78 @@ header nav ul li{
     text-align: center;
 }
 
+/* estilos para el menu en pantallas chicas*/
+.menu-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 0;
+}
+
+.menu-item-reverse {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 0;
+}
+
+.item-img {
+    width: 60%;
+}
+
+.item-titulo {
+    font-size: 24px;
+    -webkit-text-stroke-width: 0.2px;
+}
+
+.menu-description {
+    margin-bottom: 0;
+    font-weight: 800;
+    text-align: center;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+.item-option {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 2rem;
+}
+
+hr {
+    margin-bottom: 0.5rem;
+    margin-top: 0.5rem;
+}
+
+
+/* estilos del menu para pantallas medianas y grandes */
+@media (min-width: 768px) {  
+    .menu-item {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .menu-item-reverse {
+        display: flex;
+        flex-direction: row-reverse;
+    }
+    
+    .item {
+        width: 40%;
+    }
+
+    .item-img {
+        width: 40%;
+    }
+}
+
+
+
+
+
+/* estilos para el footer */
 footer {
     text-transform: uppercase;
     font-size: 150%;
@@ -117,6 +196,7 @@ footer {
     margin-top: 50px;
 }
 
+/* estilos para links y botones de la navbar */
 a {
     color: blue;
 }
