--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ h2 {
 }
 
 /* titulo principal y secundario para computadoras */
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
     h1 {
         text-align: center;
         text-align: center;
@@ -177,6 +177,11 @@ hr {
     
     .item {
         width: 40%;
+    }
+
+    .item-titulo {
+        font-size: 36px;
+        -webkit-text-stroke-width: 0.5px;        
     }
 
     .item-img {
