--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,15 @@ h2 {
         margin-top: 2rem;
     }
 
+    h2 {
+        text-align: center;
+        font-size: 48px;
+        text-transform: uppercase;
+        -webkit-text-stroke-color: whitesmoke;
+        -webkit-text-stroke-width: 0.5px;
+        color: orangered;
+    }
+
 }
 
 /* estilos para la barra de navegacion */
@@ -117,89 +126,127 @@ header nav ul li{
     text-align: center;
 }
 
-/* estilos para el menu en pantallas chicas*/
-.menu-item {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-bottom: 0;
+
+/* estilos de menu con grid para pantallas chicas */
+.menu-burgers {
+    display: grid;
+    grid-template-columns: 1fr; /* 2 columnas de igual tamaño */
+    grid-template-rows: auto 5fr 1fr auto 5fr 1fr auto 5fr 1fr auto 5fr;
+    width: 80%;
+    margin-left: 4rem;
 }
 
-.menu-item-reverse {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-bottom: 0;
+.menu-burgers img {
+    max-width: 95%;
 }
 
-.item-img {
-    width: 60%;
-}
-
-.item-titulo {
-    font-size: 24px;
-    -webkit-text-stroke-width: 0.2px;
-}
-
-.menu-description {
-    margin-bottom: 0;
-    font-weight: 800;
+.menu-burgers div {
+    align-content: center;
     text-align: center;
-    margin-left: 1rem;
-    margin-right: 1rem;
-}
-
-.item-option {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 2rem;
+    font-weight: 600;
+    margin-bottom: 10%;
+    font-size: 14px;
 }
 
 hr {
-    margin-bottom: 0.5rem;
-    margin-top: 0.5rem;
+    margin: 0;
+    padding: 0;
+}
+
+.item-option {
+    font-weight: 100;
+    margin-top: 5px;
 }
 
 
-/* estilos del menu para pantallas medianas y grandes */
-@media (min-width: 768px) {  
-    .menu-item {
-        display: flex;
-        flex-direction: row;
-    }
 
-    .menu-item-reverse {
-        display: flex;
-        flex-direction: row-reverse;
+/* estilos de menu con grid para pantallas medianas y grandes */
+@media (min-width: 768px) {
+    .menu-burgers {
+        display: grid;
+        grid-template-columns: 1fr 1fr; /* 2 columnas de igual tamaño */
+        grid-template-rows: 5fr auto 5fr auto 5fr auto 5fr auto;   /* 4 filas de igual tamaño */
+        gap: 10px;
+        width: 90%;
+        margin-left: 10rem;
+        margin-right: 5rem;
     }
     
-    .item {
-        width: 40%;
+    .menu-burgers div {
+        padding-left: 5rem;
+        padding-right: 5rem;
+        font-weight: 600;
+        font-size: 18px;
+    }
+    
+    hr {
+        grid-column: 1 / 3;
     }
 
-    .item-titulo {
-        font-size: 36px;
-        -webkit-text-stroke-width: 0.5px;        
+    .item-img1 {
+        order: 1;
     }
 
-    .item-img {
-        width: 40%;
+    .item1 {
+        order: 2;
+    }
+
+    .hr-uno {
+        order: 3;
+    }
+
+    .item-img2 {
+        order: 5;
+    }
+
+    .item2 {
+        order: 4;
+    }
+
+    .hr-dos {
+        order: 5;
+    }
+
+    .item-img3 {
+        order: 6;
+    }
+
+    .item3 {
+        order: 7;
+    }
+
+    .hr-tres {
+        order: 8;
+    }
+
+    .item-img4 {
+        order: 10;
+    }
+
+    .item4 {
+        order: 9;
+    }
+
+    .hr-cuatro {
+        order: 11;
     }
 }
-
-
-
 
 
 /* estilos para el footer */
 footer {
     text-transform: uppercase;
-    font-size: 150%;
+    font-weight: 800;
     text-align: center;
     margin-top: 50px;
 }
+
+@media (min-width: 768px) {
+    footer {
+        font-size: 150%;
+    }    
+}
+
 
 /* estilos para links y botones de la navbar */
 a {
