--- a/css/style.css
+++ b/css/style.css
@@ -1,268 +1,255 @@
-/* estilos globales */
-body{
-    background-color: #C4C7B8;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: darkblue;
-    font-style: italic;
+/* reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-/* titulo principal para pantallas moviles y tabletas */
-h1 {
+/* estilos globales */
+body {
+  background-color: #C4C7B8;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: orangered;
+  font-style: italic;
+}
+
+/* estilos para links y botones del navbar*/
+a {
+  color: darkblue;
+}
+
+a:visited {
+  color: orangered;
+}
+
+.custombotton {
+  border-color: orangered;
+  border-width: 2px;
+}
+
+.nav-link:hover {
+  color: darkblue;
+  border: 1px solid darkblue;
+}
+
+/* estilos imagen pagina principal*/
+#main-slogan {
+  display: flex;
+  justify-content: center;
+}
+
+#main-slogan img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+/* estilos texto principal en pantallas chicas y tabletas*/
+.main-text {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 50px;
+}
+.main-text div {
+  padding: 25px;
+}
+
+/* estilos seccion main text*/
+.objetivo-titulo {
+  font-size: 16px;
+  text-decoration: underline;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.objetivo-texto {
+  text-align: left;
+}
+
+.center-text {
+  text-align: center;
+}
+
+.menu-burgers {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 5fr 1fr auto 5fr 1fr auto 5fr 1fr auto 5fr;
+  width: 80%;
+  margin-left: 10%;
+}
+.menu-burgers img {
+  max-width: 95%;
+}
+.menu-burgers div {
+  align-content: center;
+  text-align: center;
+  font-weight: 600;
+  margin-bottom: 10%;
+  font-size: 14px;
+}
+
+.item-img4 {
+  margin-left: 15%;
+}
+
+hr {
+  margin: 0;
+  padding: 0;
+}
+
+.item-option {
+  font-weight: 100;
+  margin-top: 5px;
+}
+
+/* titulo principal y secundario para computadoras */
+@media screen and (min-width: 768px) {
+  h1 {
     text-align: center;
     text-align: center;
-    font-size: 45px;
+    font-size: 90px;
     color: orangered;
     -webkit-text-stroke-color: whitesmoke;
-    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-width: 3px;
     font-style: italic;
     margin-top: 2rem;
-    margin-bottom: 2rem;
-}
-
-/* estilos para los titulos secundarios */
-h2 {
+  }
+  h2 {
     text-align: center;
-    font-size: 36px;
+    font-size: 48px;
     text-transform: uppercase;
     -webkit-text-stroke-color: whitesmoke;
     -webkit-text-stroke-width: 0.5px;
     color: orangered;
+  }
 }
-
-/* titulo principal y secundario para computadoras */
-@media (min-width: 768px) {
-    h1 {
-        text-align: center;
-        text-align: center;
-        font-size: 90px;
-        color: orangered;
-        -webkit-text-stroke-color: whitesmoke;
-        -webkit-text-stroke-width: 3px;
-        font-style: italic;
-        margin-top: 2rem;
-    }
-
-    h2 {
-        text-align: center;
-        font-size: 48px;
-        text-transform: uppercase;
-        -webkit-text-stroke-color: whitesmoke;
-        -webkit-text-stroke-width: 0.5px;
-        color: orangered;
-    }
-
-}
-
-/* estilos para la barra de navegacion */
-header nav{
+/* estilos textos pag principal en pantallas grandes*/
+@media screen and (min-width: 1024px) {
+  .main-text {
     display: flex;
-    justify-content: space-between;
-    margin-inline: 50px;
-}
-
-header nav ul{
-    display: flex;
-    align-items: center;
-    list-style: none;
-    font-size: 24px;
-    gap: 30px;
-}
-
-header nav ul li{
-    display: flex;
-    text-wrap: nowrap;
-    font-family:fantasy;
-    font-variant: small-caps;
-    font-size: 180%;
-}
-
-/* estilos para la imagen de la pagina principal */
-#main-slogan {
-    display: flex;
-    justify-content: center;
-
-}
-
-/* estilos para los textos de la pagina principal en pantallas chicas y medianas*/
-.main-text {
-    display: flex;
-    flex-direction: column;
     justify-content: space-around;
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-top: 50px;
-}
-
-.main-text div {
+    flex-direction: row;
+  }
+  .main-text div {
     padding: 25px;
+    width: 33%;
+  }
 }
-
-/* estilos para los textos de la pagina principal en pantallas grandes */
-@media (min-width: 1024px) {
-    .main-text {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-    }
-    
-    .main-text div {
-        padding: 25px;
-        width: 33%;
-    }
-}
-
-.objetivo-titulo {
-    font-size: 16px;
-    text-decoration: underline;
-    text-align: center;
-    margin-top: 20px;
-}
-
-.objetivo-texto {
-    text-align: left;
-}
-
-.center-text {
-    text-align: center;
-}
-
-
-/* estilos de menu con grid para pantallas chicas */
-.menu-burgers {
-    display: grid;
-    grid-template-columns: 1fr; /* 2 columnas de igual tamaño */
-    grid-template-rows: auto 5fr 1fr auto 5fr 1fr auto 5fr 1fr auto 5fr;
-    width: 80%;
-    margin-left: 4rem;
-}
-
-.menu-burgers img {
-    max-width: 95%;
-}
-
-.menu-burgers div {
-    align-content: center;
-    text-align: center;
-    font-weight: 600;
-    margin-bottom: 10%;
-    font-size: 14px;
-}
-
-hr {
-    margin: 0;
-    padding: 0;
-}
-
-.item-option {
-    font-weight: 100;
-    margin-top: 5px;
-}
-
-
-
 /* estilos de menu con grid para pantallas medianas y grandes */
-@media (min-width: 768px) {
-    .menu-burgers {
-        display: grid;
-        grid-template-columns: 1fr 1fr; /* 2 columnas de igual tamaño */
-        grid-template-rows: 5fr auto 5fr auto 5fr auto 5fr auto;   /* 4 filas de igual tamaño */
-        gap: 10px;
-        width: 90%;
-        margin-left: 10rem;
-        margin-right: 5rem;
-    }
-    
-    .menu-burgers div {
-        padding-left: 5rem;
-        padding-right: 5rem;
-        font-weight: 600;
-        font-size: 18px;
-    }
-    
-    hr {
-        grid-column: 1 / 3;
-    }
-
-    .item-img1 {
-        order: 1;
-    }
-
-    .item1 {
-        order: 2;
-    }
-
-    .hr-uno {
-        order: 3;
-    }
-
-    .item-img2 {
-        order: 5;
-    }
-
-    .item2 {
-        order: 4;
-    }
-
-    .hr-dos {
-        order: 5;
-    }
-
-    .item-img3 {
-        order: 6;
-    }
-
-    .item3 {
-        order: 7;
-    }
-
-    .hr-tres {
-        order: 8;
-    }
-
-    .item-img4 {
-        order: 10;
-    }
-
-    .item4 {
-        order: 9;
-    }
-
-    .hr-cuatro {
-        order: 11;
-    }
+@media screen and (min-width: 768px) {
+  .menu-burgers {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 5fr auto 5fr auto 5fr auto 5fr auto;
+    gap: 10px;
+    width: 90%;
+    margin-left: 5%;
+  }
+  .menu-burgers div {
+    padding-left: 5rem;
+    padding-right: 5rem;
+    font-weight: 600;
+    font-size: 18px;
+  }
+  hr {
+    grid-column: 1/3;
+  }
+  .item-img1 {
+    order: 1;
+  }
+  .item1 {
+    order: 2;
+  }
+  .hr-uno {
+    order: 3;
+  }
+  .item-img2 {
+    order: 5;
+  }
+  .item2 {
+    order: 4;
+  }
+  .hr-dos {
+    order: 5;
+  }
+  .item-img3 {
+    order: 6;
+  }
+  .item3 {
+    order: 7;
+  }
+  .hr-tres {
+    order: 8;
+  }
+  .item-img4 {
+    order: 10;
+    margin-left: 0;
+  }
+  .item4 {
+    order: 9;
+  }
+  .hr-cuatro {
+    order: 11;
+  }
+}
+/* estilos footer en pantallas grandes*/
+@media screen and (min-width: 768px) {
+  footer {
+    font-size: 150%;
+  }
+}
+/* titulos principales para moviles y tabletas */
+h1 {
+  text-align: center;
+  text-align: center;
+  font-size: 45px;
+  color: orangered;
+  -webkit-text-stroke-color: whitesmoke;
+  -webkit-text-stroke-width: 1px;
+  font-style: italic;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
+/* estilos para titulos secundarios para moviles y tabletas */
+h2 {
+  text-align: center;
+  font-size: 36px;
+  text-transform: uppercase;
+  -webkit-text-stroke-color: whitesmoke;
+  -webkit-text-stroke-width: 0.5px;
+  color: orangered;
+}
 
-/* estilos para el footer */
+/* estilos para el header y navbar */
+header nav {
+  display: flex;
+  justify-content: space-between;
+  margin-inline: 50px;
+}
+header nav ul {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  font-size: 24px;
+  gap: 30px;
+}
+header nav ul li {
+  display: flex;
+  text-wrap: nowrap;
+  font-family: fantasy;
+  font-variant: small-caps;
+  font-size: 180%;
+}
+
+/* estilos del footer*/
 footer {
-    text-transform: uppercase;
-    font-weight: 800;
-    text-align: center;
-    margin-top: 50px;
+  text-transform: uppercase;
+  font-weight: 800;
+  text-align: center;
+  margin-top: 50px;
 }
 
-@media (min-width: 768px) {
-    footer {
-        font-size: 150%;
-    }    
-}
-
-
-/* estilos para links y botones de la navbar */
-a {
-    color: blue;
-}
-
-a:visited {
-    color: orangered;
-}
-
-.custombotton {
-    border-color: orangered;
-    border-width: 2px;
-}
-
-.nav-link:hover{
-    color:darkblue;
-    border: 1px solid darkblue;
-}
+/*# sourceMappingURL=style.css.map */
