ajuste color texto principal con SASS

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 body {
   background-color: #C4C7B8;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: orangered;
+  color: darkblue;
   font-style: italic;
 }
 
