--- a/scss/utilidades/_reset.scss
+++ b/scss/utilidades/_reset.scss
@@ -11,7 +11,7 @@
 body {
     background-color: $color-background;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: $color-principal;
+    color: $color-secundario;
     font-style: italic;
 }
 
