--- a/css/style.css
+++ b/css/style.css
@@ -109,12 +109,14 @@ hr {
   h1 {
     text-align: center;
     text-align: center;
-    font-size: 90px;
+    font-size: 85px;
     color: orangered;
     -webkit-text-stroke-color: whitesmoke;
     -webkit-text-stroke-width: 3px;
     font-style: italic;
     margin-top: 2rem;
+    margin-left: 5%;
+    margin-right: 5%;
   }
   h2 {
     text-align: center;
@@ -201,28 +203,30 @@ hr {
   }
 }
 /* titulos principales para moviles y tabletas */
-h1 {
-  text-align: center;
-  text-align: center;
-  font-size: 45px;
-  color: orangered;
-  -webkit-text-stroke-color: whitesmoke;
-  -webkit-text-stroke-width: 1px;
-  font-style: italic;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+@media screen and (max-width: 767px) {
+  h1 {
+    text-align: center;
+    text-align: center;
+    font-size: 45px;
+    color: orangered;
+    -webkit-text-stroke-color: whitesmoke;
+    -webkit-text-stroke-width: 1px;
+    font-style: italic;
+    margin-top: 2rem;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 2rem;
+  }
+  /* estilos para titulos secundarios para moviles y tabletas */
+  h2 {
+    text-align: center;
+    font-size: 36px;
+    text-transform: uppercase;
+    -webkit-text-stroke-color: whitesmoke;
+    -webkit-text-stroke-width: 0.5px;
+    color: orangered;
+  }
 }
-
-/* estilos para titulos secundarios para moviles y tabletas */
-h2 {
-  text-align: center;
-  font-size: 36px;
-  text-transform: uppercase;
-  -webkit-text-stroke-color: whitesmoke;
-  -webkit-text-stroke-width: 0.5px;
-  color: orangered;
-}
-
 /* estilos para el header y navbar */
 header nav {
   display: flex;
