--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,14 +8,16 @@
 
 
 /* titulos principales para moviles y tabletas */
-h1 {
-    @include h1 (45px, 1px);
-    margin-bottom: 2rem;
-}
-
-/* estilos para titulos secundarios para moviles y tabletas */
-h2 {
-    @include h2 (36px, 0.5px);
+@media screen and (max-width: 767px) {
+    h1 {
+        @include titulo-principal (45px, 1px);
+        margin-bottom: 2rem;
+    }
+    
+    /* estilos para titulos secundarios para moviles y tabletas */
+    h2 {
+        @include h2 (36px, 0.5px);
+    }
 }
 
 /* estilos para el header y navbar */
