--- a/scss/general/mq-computadora.scss
+++ b/scss/general/mq-computadora.scss
@@ -94,6 +94,52 @@
     }
 }
 
+
+//estilos para BLOG en pantallas grandes
+
+@media screen and (min-width:1024px) {
+    .blog-section {
+        // margin-top: 5rem;
+        margin-bottom: 5rem;
+        div {
+            margin-top: 1rem;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            align-content: center;
+            
+            div {
+                @include flex(center);
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+                width: 50%;
+                margin-left: 0;
+                p {
+                    font-size: 36px;
+                    text-align: center;
+                    width: 75%;
+                }
+                a {
+                    color: $color-secundario;
+                }
+            }
+        }
+    }
+
+    .blog-search {
+        @include flex(center);
+        margin-top: 2rem;
+        font-size: 16px;
+        border: 2px solid $color-principal;
+        margin-left: 35%;
+        margin-right: 35%;
+    }
+}
+
+
+
+
 /* estilos footer en pantallas grandes*/
 @media screen and (min-width: 768px) {
     footer {
