--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,7 @@
 @import "general/home.scss";
 @import "general/menu.scss";
 @import "general/blog.scss";
+@import "general/contacto.scss";
 @import "general/mq-computadora.scss";
 
 
