--- a/scss/general/contacto.scss
+++ b/scss/general/contacto.scss
@@ -16,6 +16,9 @@ main section div{
             label {
                 font-size: 24px;
             }
+            textarea {
+                min-height: 200px;
+            }
         }
         .submit-button {
             margin-top: 2.5rem;
