--- a/scss/general/contacto.scss
+++ b/scss/general/contacto.scss
@@ -1,7 +1,7 @@
 @import "../utilidades/mixin";
 @import "../utilidades/variables";
 
-main section div{
+main .form-contacto div{
     display: flex;
     flex-direction: column;
     margin-left: 10%;
