--- a/css/style.css
+++ b/css/style.css
@@ -34,15 +34,13 @@ a:visited {
 }
 
 /* estilos imagen pagina principal*/
-#main-slogan {
+.carousel-inner {
   display: flex;
-  justify-content: center;
-  margin-top: 5rem;
-}
-
-#main-slogan img {
-  max-width: 100%;
-  max-height: 100%;
+  justify-content: Start;
+  margin-left: 20px;
+  margin-right: 10px;
+  max-width: 98%;
+  max-height: 1000px;
 }
 
 /* estilos texto principal en pantallas chicas y tabletas*/
