--- a/scss/general/home.scss
+++ b/scss/general/home.scss
@@ -2,14 +2,12 @@
 @import "../utilidades/variables";  
 
 /* estilos imagen pagina principal*/
-#main-slogan {
-    @include flex(center);
-    margin-top: 5rem;
-}
-
-#main-slogan img{
-    max-width: 100%;
-    max-height: 100%
+.carousel-inner {
+    @include flex(Start);
+    margin-left: 20px;
+    margin-right: 10px;
+    max-width: 98%;
+    max-height: 1000px;
 }
 
 /* estilos texto principal en pantallas chicas y tabletas*/
