--- a/scss/utilidades/_reset.scss
+++ b/scss/utilidades/_reset.scss
@@ -20,6 +20,10 @@ a {
     color: $color-secundario;
 }
 
+.nav-link {
+    color: $color-principal;
+}
+
 a:visited {
     color: $color-principal;
 }
