--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,8 @@ a:visited {
 .carousel-inner {
   display: flex;
   justify-content: Start;
+  margin-left: 5px;
+  margin-right: 5px;
   max-width: 98%;
   max-height: 1000px;
 }
