--- a/scss/general/home.scss
+++ b/scss/general/home.scss
@@ -4,6 +4,8 @@
 /* estilos imagen pagina principal*/
 .carousel-inner {
     @include flex(Start);
+    margin-left: 5px;
+    margin-right: 5px;
     max-width: 98%;
     max-height: 1000px;
 }
