--- a/scss/utilidades/_reset.scss
+++ b/scss/utilidades/_reset.scss
@@ -26,7 +26,7 @@ a {
     text-wrap: nowrap;
     font-family: fantasy;
     font-variant: small-caps;
-    font-size: 180%;
+    justify-content: center;
 }
 
 a:visited {
