--- a/scss/utilidades/_reset.scss
+++ b/scss/utilidades/_reset.scss
@@ -24,7 +24,7 @@ a {
     color: $color-principal;
     display: flex;
     text-wrap: nowrap;
-    font-family: fantasy;
+    // font-family: fantasy;
     font-variant: small-caps;
     font-size: 180%;
 }
