--- a/scss/utilidades/_reset.scss
+++ b/scss/utilidades/_reset.scss
@@ -20,14 +20,14 @@ a {
     color: $color-secundario;
 }
 
-.nav-link {
-    color: $color-principal;
-    display: flex;
-    text-wrap: nowrap;
-    // font-family: fantasy;
-    font-variant: small-caps;
-    font-size: 180%;
-}
+// .nav-link {
+//     color: $color-principal;
+//     display: flex;
+//     text-wrap: nowrap;
+//     // font-family: fantasy;
+//     font-variant: small-caps;
+//     font-size: 180%;
+// }
 
 a:visited {
     color: $color-principal;
