--- a/css/style.css
+++ b/css/style.css
@@ -394,23 +394,24 @@ main .form-contacto div form .submit-button {
 /* estilos para el header y navbar */
 header nav {
   display: flex;
-  justify-content: space-between;
-  margin-inline: 50px;
-}
-header nav ul {
-  display: flex;
   align-items: center;
   list-style: none;
   font-size: 24px;
   gap: 30px;
 }
-header nav ul li {
+header nav .navbar-nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 150%;
+  font-family: fantasy;
+  font-variant: small-caps;
   color: orangered;
   display: flex;
   text-wrap: nowrap;
-  font-family: fantasy;
-  font-variant: small-caps;
-  font-size: 180%;
+}
+header nav .navbar-nav .nav-item {
+  margin-inline: 1.5rem;
 }
 
 /* estilos del footer*/
