--- a/scss/general/mq-computadora.scss
+++ b/scss/general/mq-computadora.scss
@@ -1,6 +1,19 @@
 @import "../utilidades/mixin";
 @import "../utilidades/variables";
 
+
+/*estilo navbar para computadoras*/
+header nav {
+    .navbar-nav {
+        @include navbar;
+        .nav-item {
+            font-family: fantasy;
+            font-variant: small-caps;
+            font-size: 150%;
+        }
+    }
+}
+
 /* titulo principal y secundario para computadoras */
 @media screen and (min-width: 768px) {
     h1 {
