--- a/scss/general/mq-computadora.scss
+++ b/scss/general/mq-computadora.scss
@@ -3,13 +3,15 @@
 
 
 /*estilo navbar para computadoras*/
-header nav {
-    .navbar-nav {
-        @include navbar;
-        .nav-item {
-            font-family: fantasy;
-            font-variant: small-caps;
-            font-size: 150%;
+@media screen and (min-width: 768px){
+        header nav {
+            .navbar-nav {
+                @include navbar;
+                .nav-item {
+                    font-family: fantasy;
+                    font-variant: small-caps;
+                    font-size: 150%;
+            }
         }
     }
 }
