--- a/css/style.css
+++ b/css/style.css
@@ -393,19 +393,27 @@ main .form-contacto div form .submit-button {
 }
 header nav {
   font-family: fantasy;
+  display: flex;
+  align-items: center;
+  font-variant: small-caps;
+  font-size: 36px;
+  margin-inline: 1rem;
 }
 header nav .navbar-nav {
   font-family: fantasy;
   display: flex;
   align-items: center;
-}
-header nav .navbar-nav .nav-item {
-  font-family: fantasy;
   font-variant: small-caps;
   font-size: 36px;
   margin-inline: 1rem;
+}
+header nav .navbar-nav .nav-item {
+  font-family: fantasy;
   display: flex;
   align-items: center;
+  font-variant: small-caps;
+  font-size: 36px;
+  margin-inline: 1rem;
 }
 
 /* estilos del footer*/
