--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,17 +25,25 @@
 
 header nav {
     font-family: fantasy;
+    display: flex;
+    align-items: center;
+    font-variant: small-caps;
+    font-size: 36px;
+    margin-inline: 1rem;
     .navbar-nav {
         font-family: fantasy;
         display: flex;
         align-items: center;
+        font-variant: small-caps;
+        font-size: 36px;
+        margin-inline: 1rem;
         .nav-item {
             font-family: fantasy;
+            display: flex;
+            align-items: center;
             font-variant: small-caps;
             font-size: 36px;
             margin-inline: 1rem;
-            display: flex;
-            align-items: center;
         }
     }
 }
