--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,25 @@
 }
 
 /* estilos globales */
+body {
+  background-color: #C4C7B8;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: darkblue;
+  font-style: italic;
+}
+
 /* estilos para links y botones del navbar*/
 a {
   color: darkblue;
+}
+
+.nav-link {
+  font-family: fantasy;
+  display: flex;
+  align-items: center;
+  font-variant: small-caps;
+  font-size: 36px;
+  margin-inline: 1rem;
 }
 
 a:visited {
