--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,7 @@ hr {
   text-align: center;
   margin-left: 10%;
   width: 80%;
+  margin-top: 15px;
 }
 .blog-section div div p {
   font-size: 18px;
