--- a/scss/general/blog.scss
+++ b/scss/general/blog.scss
@@ -17,6 +17,7 @@
             text-align: center;
             margin-left: 10%;
             width: 80%;
+            margin-top: 15px;
             p {
                 font-size: 18px;
                 text-align: center;
