--- a/scss/style.scss
+++ b/scss/style.scss
@@ -37,6 +37,7 @@ header nav {
         font-variant: small-caps;
         font-size: 36px;
         margin-inline: 1rem;
+        flex-wrap: nowrap;
         .nav-item {
             font-family: fantasy;
             display: flex;
